# SynDiv

./: CMakeLists.txt  LICENSE  README.md  SynDiv.py  SynDiv_c.cpp  SynDiv_p.py  cal_Syn_Fst.py  gene_Syn_Fst.py  genome2SynDiv_config.py  meta.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yaml.cp
SynDiv/: SynDiv.py  SynDiv_c.cpp  SynDiv_p.py
SynDiv/include/: GzChunkReader.hpp  cal-fast.hpp  cal.hpp  coor.hpp  get_time.hpp  multiinter.hpp  no_syn.hpp  no_syn_alignment.py  save.hpp  syri_syn.py  window.hpp
SynDiv/src/: cal.cpp  coor.cpp  multiinter.cpp  no_syn.cpp  window.cpp
include/: ChunkReader.hpp  Fst.hpp  GzChunkReader.hpp  ThreadPool.hpp  cal.hpp  coor.hpp  fasta_length.py  file_open.py  multiinter.hpp  no_syn.hpp  no_syn_alignment.py  run_cmd.py  save.hpp  strip_split_join.hpp  syri_syn.py  sys.hpp  window.hpp
src/: Fst.cpp  cal.cpp  coor.cpp  multiinter.cpp  no_syn.cpp  save.cpp  strip_split_join.cpp  window.cpp
test/: code.sh  configuration.txt
test/aligns/: An-1.aligns  C24.aligns  Cvi.aligns  Eri.aligns  Kyo.aligns  Ler.aligns  Sha.aligns
test/genome/: An-1.fa  C24.fa  Cvi.fa  Eri.fa  Kyo.fa  Ler.fa  Ler.fa.fai  Sha.fa  refgenome.fa
test/syri/: An-1.syri.out  C24.syri.out  Cvi.syri.out  Eri.syri.out  Kyo.syri.out  Ler.syri.out  Sha.syri.out
